feat: implement admin seeder, role-based authorities mapping, admin role-promotion API, and update integration docs